{
    "version": 1,
    "name": "CardControl",
    "maps": [
        {
            "name": "Touch",
            "id": "fae9a09b-3c55-45a7-93ea-df14ae9c5b7e",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "9fe41566-7c36-472f-8aa6-fd487a84e755",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "9e3e1ece-02d5-4cf8-b122-a0aea080c733",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DebugClick",
                    "type": "Button",
                    "id": "b69edacd-72fb-4a62-8435-5b2850f657f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DebugPos",
                    "type": "PassThrough",
                    "id": "4d4534c2-6dff-48c4-86a7-a44ebec3d4bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "adff90a6-9f14-4591-9380-8e7a94a73433",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc5dc7b6-d411-4e90-8689-fba4a17af0a1",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2642d28c-2e03-4e02-b7ca-0827dc406f10",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8951584-c5d0-4e54-8814-b3a891be7701",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}